# espresso-prototype

./: .env.example  .gitignore  DELIVERY_PACKAGE.md  DEMO_SCRIPTS.md  DOCUMENTATION_INDEX.md  FINAL_DELIVERY_SUMMARY.md  GIT_SETUP.md  IMF_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE4_COMPLETE.md  PHASE4_STATUS.md  PHASE6_COMPLETE.md  PHASE6_COMPLETION_SUMMARY.txt  PHASE6_DOCUMENTATION_INDEX.md  PHASE6_VERIFICATION.md  PROJECT_COMPLETE.md  QUICKSTART_PHASE6.md  QUICK_START.md  QUICK_START_PHASE4.md  README.md  README_PHASE6.md  SESSION_SUMMARY_2026-01-31.md  STATUS_REPORT.md  TECHNICAL_REFERENCE.md  TERMINAL_VISUALIZATIONS.md  TEST_EXECUTION_REPORT.md  TEST_RESULTS.md  USER_GUIDE.md  WEB_INTERFACE_GUIDE.md  WEB_INTERFACE_TECHNICAL.md  analysis_core.py  api_server.py  app.py  audit_log.py  data_profile.py  data_utils.py  datasets.py  diagnostics.py  find_indicators.py  (+30 more)
data/: test_causal.csv  test_panel.csv
espresso/: __init__.py  cli.py  glossary.py  ingest.py  mascot.py  profiling.py  whatif.py
espresso/agent/: __init__.py  context.py  coordinator.py  domain_engine.py  era_breakdown.py  prompts.py  session.py  tools.py  world_context.py
espresso/viz/: __init__.py  html_report.py  table_export.py  terminal.py
static/: app.css  app.js  script.js  style.css
templates/: index.html
tests/: test_agent.py  test_core.py  test_ingest.py  test_web_app.py  test_whatif.py
